# montag

./: .gitignore  .travis.yml  LICENSE  Makefile  README.md  pyproject.toml  shell.nix
.github/workflows/: ci.yml
backend/: .gitignore  .travis.yml
backend/examples/: use_cases.py  write_ytmusic_auth_token.py
backend/montag/: __init__.py  system.py
backend/tests/: helpers.py  matchers.py
examples/: use_cases.py
frontend/: .proxyrc.json  package.json  shell.nix
frontend/src/: App.tsx  PlaylistList.tsx  ProviderSelector.tsx  api.ts  domain.ts  index.html
montag/: __init__.py  config.py  domain.py  models.py  system.py
montag/adapters/: spotify.py  ytmusic.py
montag/api/: app.py
montag/cli/: api.py  cli.py  core.py  spotify.py  support.py  ytmusic.py
montag/clients/: http.py  spotify.py  spotify_client.py
montag/domain/: entities.py  errors.py
montag/examples/: integrations.py  spotify.py  ytmusic.py
montag/gateways/: http.py  spotify.py
montag/repositories/: __init__.py  music_repo.py  spotify.py  spotify_repo.py  types.py  ytmusic.py  ytmusic_repo.py
montag/use_cases/: add_tracks_to_mirror_playlist.py  add_tracks_to_playlist.py  create_playlist.py  decorators.py  fetch_playlists.py  fetch_tracks.py  search_matching_tracks.py  support.py  types.py
montag/util/: clock.py  collections.py  dict.py
montag/web/: app.py  spotify_auth.py  support.py
tests/: factory.py  helpers.py  matchers.py  test_montag.py
tests/adapters/: test_spotify.py
tests/api/: test_app.py
tests/clients/: test_spotify.py  test_spotify_client.py
(+77 files in other folders)
