[tool.poetry]
name = "example"
version = "0.1.0"
description = ""
authors = ["Emmanuel Nicolau <emmanicolau@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
autopep8 = "^1.6.0"
mypy = "^0.931"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
