[tool.poetry]
name = "montag"
version = "0.1.0"
description = ""
authors = ["Emmanuel Nicolau <emmanicolau@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
mypy = "^0.931"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
