[tool.poetry]
name = "montag"
version = "0.1.0"
description = ""
authors = ["Emmanuel Nicolau <emmanicolau@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
Flask = "^2.0.3"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
mypy = "^0.931"
black = "^22.1.0"
types-requests = "^2.27.11"
ipython = "^8.1.1"
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
